--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-title: Salebarn
-email: salebarn@gmail.com
-description: Accelerating negotiations ... increasing the bid, building momentum, friendraising to improve the health of communities.
-twitter_username: Salebarn_LLC
-github_username:  Salebarn
+title: Melon Cave
+email: MarkBruns@MarkBruns.com
+description: KNOCK OFF the BAD HABITS of being yourself. Cave in your bad habit melon ... KNOCK OFF your bad habits.
+twitter_username: MarkBruns
+github_username:  MelonCave
 
 # Build settings
 markdown: kramdown
