--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Melon Cave
 email: MarkBruns@MarkBruns.com
-description: KNOCK OFF the BAD HABITS of being yourself. Cave in your bad habit melon ... KNOCK OFF your bad habits.
+description: KNOCK OFF the BAD HABITS of being yourself. Get serious about caving in your bad habit melon.
 twitter_username: MarkBruns
 github_username:  MelonCave
 
