--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Melon Cave
 email: MarkBruns@MarkBruns.com
-description: KNOCK OFF the BAD HABITS of being yourself. Stop fucking yourself over. Don't negotiate with your demons. Cave in your bad habit melon.
+description: KNOCK OFF the BAD HABITS of being yourself. Cave in the melon of zombie couch mashed-potatoness.
 twitter_username: MarkBruns
 github_username:  MelonCave
 
