first things first

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Melon Cave
 email: MarkBruns@MarkBruns.com
-description: KNOCK OFF the BAD HABITS of being yourself. Cave in the melon of zombie couch mashed-potatoness.
+description: Cave in the melon of zombie couch mashed-potatoness. KNOCK OFF the BAD HABITS of being yourself.
 twitter_username: MarkBruns
 github_username:  MelonCave
 
