--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Melon Cave
 email: MarkBruns@MarkBruns.com
-description: Cave in the melon of zombie couch mashed-potatoness. KNOCK OFF the BAD HABITS of being yourself.
+description: Cave in the melon of couch mashed-potatoness. KNOCK OFF the PASSIVE CONSUMPTION HABITS of being the passive zombie target market.
 twitter_username: MarkBruns
 github_username:  MelonCave
 
