--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Melon Cave
 email: MarkBruns@MarkBruns.com
-description: Melon Cave is ANTI-media media ... it's not about entertainment. It's about changing cognitive strategies to overcome the bad habits of being yourself. Upgrades in discipline are a result of struggle, failure, pain and your neuroplasticity ... 'caving in your melon' is about collapsing the gaseous, spongey ideas into solid discipline. You were created for GROWTH! Celebrate by being grateful to your Creator!
+description: Melon Cave is ANTI-media media ... it's about discipline and gratitude for our Creator!
 twitter_username: MarkBruns
 github_username:  MelonCave
 
